tests/dataset/tpc-ds/compiler/c/q10.error
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:257:3: error: unknown type name ‘customer_address_t’
  257 |   customer_address_t *data;
      |   ^~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c: In function ‘create_customer_address_list’:
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:262:31: error: ‘customer_address_t’ undeclared (first use in this function); did you mean ‘customer_addres_t’?
  262 |   l.data = calloc(len, sizeof(customer_address_t));
      |                               ^~~~~~~~~~~~~~~~~~
      |                               customer_addres_t
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:262:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c: At top level:
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:283:3: error: unknown type name ‘customer_demographics_t’
  283 |   customer_demographics_t *data;
      |   ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c: In function ‘create_customer_demographics_list’:
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:288:31: error: ‘customer_demographics_t’ undeclared (first use in this function); did you mean ‘customer_demographic_t’?
  288 |   l.data = calloc(len, sizeof(customer_demographics_t));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~
      |                               customer_demographic_t
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c: In function ‘test_TPCDS_Q10_demographics_count’:
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:353:59: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  353 |   if (test_TPCDS_Q10_demographics_count_result.len != tmp1.len) {
      |                                                           ^
      |                                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:357:68: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  357 |       if (test_TPCDS_Q10_demographics_count_result.data[i3] != tmp1.data[i3]) {
      |                                                                    ^
      |                                                                    ->
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:398:7: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  398 |       store_sale_list_t_create(store_sales.len * date_dim.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:398:43: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  398 |       store_sale_list_t_create(store_sales.len * date_dim.len);
      |                                           ^
      |                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:398:58: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  398 |       store_sale_list_t_create(store_sales.len * date_dim.len);
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:407:34: error: ‘c’ undeclared (first use in this function)
  407 |       if (!(ss.ss_customer_sk == c.c_customer_sk && d.d_year == 2000 &&
      |                                  ^
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:416:38: warning: implicit declaration of function ‘customer_demographic_list_t_create’ [-Wimplicit-function-declaration]
  416 |   customer_demographic_list_t tmp8 = customer_demographic_list_t_create(
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:417:15: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  417 |       customer.len * customer_address.len * customer_demographics.len);
      |               ^
      |               ->
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:417:38: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  417 |       customer.len * customer_address.len * customer_demographics.len);
      |                                      ^
      |                                      ->
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:417:66: error: ‘(customer_demographic_t *)&customer_demographics’ is a pointer; did you mean to use ‘->’?
  417 |       customer.len * customer_address.len * customer_demographics.len);
      |                                                                  ^
      |                                                                  ->
/tmp/TestCCompiler_TPCDS_Goldenq103388491434/001/prog.c:507:46: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  507 |   test_TPCDS_Q10_demographics_count_result = result;
      |                                              ^~~~~~
