tests/dataset/tpc-ds/compiler/c/q10.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct Customer Customer;
typedef struct CustomerAddress CustomerAddress;
typedef struct CustomerDemographics CustomerDemographics;
typedef struct StoreSale StoreSale;
typedef struct DateDim DateDim;

typedef struct {
  const char *cd_gender;
  const char *cd_marital_status;
  const char *cd_education_status;
  int cnt1;
  int cd_purchase_estimate;
  int cnt2;
  const char *cd_credit_rating;
  int cnt3;
  int cd_dep_count;
  int cnt4;
  int cd_dep_employed_count;
  int cnt5;
  int cd_dep_college_count;
  int cnt6;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  int c_current_addr_sk;
  int c_current_cdemo_sk;
} customer_t;

typedef struct {
  int ca_address_sk;
  const char *ca_county;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cd_demo_sk;
  const char *cd_gender;
  const char *cd_marital_status;
  const char *cd_education_status;
  int cd_purchase_estimate;
  const char *cd_credit_rating;
  int cd_dep_count;
  int cd_dep_employed_count;
  int cd_dep_college_count;
} customer_demographic_t;
typedef struct {
  int len;
  customer_demographic_t *data;
} customer_demographic_list_t;
customer_demographic_list_t create_customer_demographic_list(int len) {
  customer_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  int ss_sold_date_sk;
} store_sale_t;

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;

typedef struct {
  int cd_gender;
  int cd_marital_status;
  int cd_education_status;
  int cnt1;
  int cd_purchase_estimate;
  int cnt2;
  int cd_credit_rating;
  int cnt3;
  int cd_dep_count;
  int cnt4;
  int cd_dep_employed_count;
  int cnt5;
  int cd_dep_college_count;
  int cnt6;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Customer {
  int c_customer_sk;
  int c_current_addr_sk;
  int c_current_cdemo_sk;
} Customer;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CustomerAddress {
  int ca_address_sk;
  char *ca_county;
} CustomerAddress;
typedef struct {
  int len;
  customer_address_t *data;
} customer_address_list_t;
customer_address_list_t create_customer_address_list(int len) {
  customer_address_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_address_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CustomerDemographics {
  int cd_demo_sk;
  char *cd_gender;
  char *cd_marital_status;
  char *cd_education_status;
  int cd_purchase_estimate;
  char *cd_credit_rating;
  int cd_dep_count;
  int cd_dep_employed_count;
  int cd_dep_college_count;
} CustomerDemographics;
typedef struct {
  int len;
  customer_demographics_t *data;
} customer_demographics_list_t;
customer_demographics_list_t create_customer_demographics_list(int len) {
  customer_demographics_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_demographics_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_customer_sk;
  int ss_sold_date_sk;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  int d_year;
  int d_moy;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q10_demographics_count_result;
static void test_TPCDS_Q10_demographics_count() {
  tmp1_t tmp1[] = {(tmp1_t){.cd_gender = "F",
                            .cd_marital_status = "M",
                            .cd_education_status = "College",
                            .cnt1 = 1,
                            .cd_purchase_estimate = 5000,
                            .cnt2 = 1,
                            .cd_credit_rating = "Good",
                            .cnt3 = 1,
                            .cd_dep_count = 1,
                            .cnt4 = 1,
                            .cd_dep_employed_count = 1,
                            .cnt5 = 1,
                            .cd_dep_college_count = 0,
                            .cnt6 = 1}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q10_demographics_count_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q10_demographics_count_result.len; i3++) {
      if (test_TPCDS_Q10_demographics_count_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_t customer[] = {(customer_t){
      .c_customer_sk = 1, .c_current_addr_sk = 1, .c_current_cdemo_sk = 1}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_county = "CountyA"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  customer_demographic_t customer_demographics[] = {
      (customer_demographic_t){.cd_demo_sk = 1,
                               .cd_gender = "F",
                               .cd_marital_status = "M",
                               .cd_education_status = "College",
                               .cd_purchase_estimate = 5000,
                               .cd_credit_rating = "Good",
                               .cd_dep_count = 1,
                               .cd_dep_employed_count = 1,
                               .cd_dep_college_count = 0}};
  int customer_demographics_len =
      sizeof(customer_demographics) / sizeof(customer_demographics[0]);
  store_sale_t store_sales[] = {
      (store_sale_t){.ss_customer_sk = 1, .ss_sold_date_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  list_int web_sales = list_int_create(0);
  list_int catalog_sales = list_int_create(0);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2000, .d_moy = 2}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_sale_list_t tmp4 =
      store_sale_list_t_create(store_sales.len * date_dim.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < date_dim_len; tmp7++) {
      date_dim_t d = date_dim[tmp7];
      if (!(ss.ss_sold_date_sk == d.d_date_sk)) {
        continue;
      }
      if (!(ss.ss_customer_sk == c.c_customer_sk && d.d_year == 2000 &&
            d.d_moy >= 2 && d.d_moy <= 5)) {
        continue;
      }
      tmp4.data[tmp5] = ss;
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  customer_demographic_list_t tmp8 = customer_demographic_list_t_create(
      customer.len * customer_address.len * customer_demographics.len);
  int tmp9 = 0;
  for (int tmp10 = 0; tmp10 < customer_len; tmp10++) {
    customer_t c = customer[tmp10];
    for (int tmp11 = 0; tmp11 < customer_address_len; tmp11++) {
      customer_addres_t ca = customer_address[tmp11];
      if (!(c.c_current_addr_sk == ca.ca_address_sk &&
            ca.ca_county == "CountyA")) {
        continue;
      }
      for (int tmp12 = 0; tmp12 < customer_demographics_len; tmp12++) {
        customer_demographic_t cd = customer_demographics[tmp12];
        if (!(c.c_current_cdemo_sk == cd.cd_demo_sk)) {
          continue;
        }
        if (!(tmp4.len > 0)) {
          continue;
        }
        tmp8.data[tmp9] = cd;
        tmp9++;
      }
    }
  }
  tmp8.len = tmp9;
  customer_demographic_list_t active = tmp8;
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i13 = 0; i13 < result.len; i13++) {
    if (i13 > 0)
      printf(",");
    result_item_t it = result.data[i13];
    printf("{");
    _json_string("cd_gender");
    printf(":");
    _json_int(it.cd_gender);
    printf(",");
    _json_string("cd_marital_status");
    printf(":");
    _json_int(it.cd_marital_status);
    printf(",");
    _json_string("cd_education_status");
    printf(":");
    _json_int(it.cd_education_status);
    printf(",");
    _json_string("cnt1");
    printf(":");
    _json_int(it.cnt1);
    printf(",");
    _json_string("cd_purchase_estimate");
    printf(":");
    _json_int(it.cd_purchase_estimate);
    printf(",");
    _json_string("cnt2");
    printf(":");
    _json_int(it.cnt2);
    printf(",");
    _json_string("cd_credit_rating");
    printf(":");
    _json_int(it.cd_credit_rating);
    printf(",");
    _json_string("cnt3");
    printf(":");
    _json_int(it.cnt3);
    printf(",");
    _json_string("cd_dep_count");
    printf(":");
    _json_int(it.cd_dep_count);
    printf(",");
    _json_string("cnt4");
    printf(":");
    _json_int(it.cnt4);
    printf(",");
    _json_string("cd_dep_employed_count");
    printf(":");
    _json_int(it.cd_dep_employed_count);
    printf(",");
    _json_string("cnt5");
    printf(":");
    _json_int(it.cnt5);
    printf(",");
    _json_string("cd_dep_college_count");
    printf(":");
    _json_int(it.cd_dep_college_count);
    printf(",");
    _json_string("cnt6");
    printf(":");
    _json_int(it.cnt6);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q10_demographics_count_result = result;
  test_TPCDS_Q10_demographics_count();
  return 0;
}
